Fixed css to not display extra white space in Firefox.

--- a/app/assets/stylesheets/listings.css
+++ b/app/assets/stylesheets/listings.css
@@ -51,7 +51,6 @@
 
 .job-posting{
 	border-bottom: solid 1px #d3d3d3;
-	margin-right: 50%;
 	margin-top: 15px;
 }
 
